src/main/design/css/components/listing-styles.scss
@import '../config/base-vars';

.listing-header {
  display: flex;
  align-items: center;

  .listing-actions {
    margin-left: auto;
    display: flex;
    align-items: center;

    .btn {
      border-radius: 2px;
      overflow: hidden;
    }
  }
}

.filters-expandable-ctrl {
  margin-right: 10px;

  .expand-btn,
  .collapse-btn {
    &:after {
      content: "\f0b0";
    }
  }
}

.search-filters {
  text-align: center;
  margin-bottom: 20px;

  .search-actions {
    margin-top: 10px;

    .search-btn {
      margin: 0 auto;
    }

    .reset-btn {
      width: 100%;
      margin-top: 10px;
    }
  }
}

.listing {
  .item {
    display: flex;
    border: 1px solid rgb(68, 68, 68);
    background-color: #ececec;
    box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
    transition: background-color 200ms linear, box-shadow 200ms linear;
    border-radius: 2px;
    overflow: hidden;
    flex-wrap: wrap;

    &:hover {
      box-shadow: 3px 3px 10px -2px rgba(0, 0, 0, 0.53);
      background-color: #fcfcfc;
    }

    & + .item {
      margin-top: 12px;
    }

    .item-info {
      padding: 10px 15px;
    }

    .item-info > * + * {
      margin-top: 5px;
    }

    .attr-lbl {
      &:after {
        content: ":";
        display: inline;
      }
    }

    .attr-val {
      margin-left: 5px;
    }
  }

  .actions {
    display: flex;
    width: 100%;
    border-left: 1px solid rgb(68, 68, 68);

    .btn {
      box-shadow: none;
      flex: 1 0 auto;
    }

    .btn + .btn {
      border-top: 1px solid rgb(68, 68, 68);
    }
  }
}

.update-book-form {
  .form-title h3 {
    margin-top: 0;
  }
}

.popup .update-book-form {
  padding: 10px 0;
}

@media(min-width: $bp-tablet) {
  .search-filters {
    text-align: left;

    .filter {
      display: inline-block;

      & + .filter {
        margin-left: 10px;
        margin-bottom: 0;
      }
    }

    .search-actions {
      margin-top: 10px;

      .search-btn,
      .reset-btn {
        display: inline-block;
        width: 100%;
      }

      .reset-btn {
        margin-top: 0;
        margin-left: 10px;
      }
    }
  }

  .listing {
    .item {
      align-items: stretch;
      padding-left: 15px;

      .item-info {
        width: auto;
        padding: 10px 0;
      }
    }

    .actions {
      display: flex;
      flex-direction: column;
      width: auto;
      margin-left: auto;

      .btn {
        height: 50%;
      }
    }
  }
}

